# govuk-agentic-legibility

./: .gitignore  .gitmodules  Justfile  README.md  main.py  pyproject.toml
analysis/markdown-determinism/: README.md  analysis.py  comparison.py  evaluation.py  generate_viewer.py  pyproject.toml  request.py  viewer.html
analysis/markdown-determinism/fixtures/address_history/: case.txt  experiment.json  instructions.txt
analysis/markdown-determinism/fixtures/address_history_conversation/: experiment.json  instructions.txt
analysis/markdown-determinism/fixtures/address_history_corrections/: case.txt  experiment.json  instructions.txt  tool_schema.json
analysis/markdown-determinism/fixtures/address_history_five_year/: case.txt  expected_arguments.json  experiment.json  instructions.txt  tool_schema.json
analysis/markdown-determinism/fixtures/skills_support_route/: DESCRIPTION.md  case.txt  expected_arguments.json  instructions.txt  tool_schema.json
analysis/markdown-determinism/fixtures/trivial_contact/: case.txt  evaluation.json  expected_arguments.json  instructions.txt
analysis/markdown-determinism/runs/20260702T105319Z-0c2e6593/: differences.txt  manifest.json  responses.jsonl  summary.json
analysis/markdown-determinism/runs/20260702T105603Z-46836d72/: differences.txt  request.json
analysis/markdown-determinism/runs/20260702T132748Z-8af92977/: differences.txt  manifest.json  request.json  responses.jsonl  summary.json  (+1 more)
analysis/markdown-determinism/tests/: test_address_history_fixture.py  test_eval.py  test_fixture_config.py  test_generic_fixtures.py
(+121 files in other folders)
