[project]
name = "trivial-form-eval"
version = "0.1.0"
description = "Minimal local evaluation harness for JSON-schema-backed form tool calls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litellm>=1.74.0",
  "pydantic[email]>=2.8.0",
  "boto3>=1.34.0",
]

[project.scripts]
trivial-form-eval = "trivial_form_eval.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trivial_form_eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
